--- a/ChatBotTest/templates/chatbot_form.html
+++ b/ChatBotTest/templates/chatbot_form.html
@@ -1,3 +1,8 @@
+//Código base para o site principal. Nele estão inclusos a lógica do site e algumas pequenas alterações no design da página
+//seja pelo .css ou pela formatação do próprio HTML.
+//A lógica do ChatBot também já está inclusa, junto de um pequeno design, mas ainda está imcompleto, porém é funcional.
+//ChatBot é visível apenas quando o botão dele é clicado.
+
 {% load static %}
 
 <!DOCTYPE html>
